--- a/samples/subsys/mgmt/mcumgr/smp_svr/configuration/nrf5340dk_nrf5340_cpuapp/prj.conf
+++ b/samples/subsys/mgmt/mcumgr/smp_svr/configuration/nrf5340dk_nrf5340_cpuapp/prj.conf
@@ -65,3 +65,13 @@ CONFIG_MCUMGR_GRP_IMG_UPLOAD_CHECK_HOOK=y
 CONFIG_NORDIC_QSPI_NOR=y
 CONFIG_NORDIC_QSPI_NOR_FLASH_LAYOUT_PAGE_SIZE=4096
 CONFIG_NORDIC_QSPI_NOR_STACK_WRITE_BUFFER_SIZE=16
+
+
+# Configuration for split application (internal flash and XIP)
+CONFIG_CODE_DATA_RELOCATION=y
+CONFIG_HAVE_CUSTOM_LINKER_SCRIPT=y
+CONFIG_CUSTOM_LINKER_SCRIPT="linker_arm_nocopy.ld"
+CONFIG_BUILD_NO_GAP_FILL=y
+CONFIG_XIP=y
+CONFIG_NORDIC_QSPI_NOR_XIP=y
+CONFIG_XIP_SPLIT_IMAGE=y
