Fix not using QSPI mode for flash and fit init priorities

--- a/boards/arm/nrf5340dk_nrf5340/nrf5340_cpuapp_common.dtsi
+++ b/boards/arm/nrf5340dk_nrf5340/nrf5340_cpuapp_common.dtsi
@@ -182,9 +182,9 @@
 		compatible = "nordic,qspi-nor";
 		reg = <0>;
 		/* MX25R64 supports only pp and pp4io */
-		writeoc = "pp";
+		writeoc = "pp4io";
 		/* MX25R64 supports all readoc options */
-		readoc = "fastread";
+		readoc = "read4io";
 		sck-frequency = <8000000>;
 		jedec-id = [c2 28 17];
 		sfdp-bfp = [
