--- a/samples/subsys/mgmt/mcumgr/smp_svr/configuration/nrf5340dk_nrf5340_cpuapp/prj.conf
+++ b/samples/subsys/mgmt/mcumgr/smp_svr/configuration/nrf5340dk_nrf5340_cpuapp/prj.conf
@@ -75,3 +75,7 @@ CONFIG_BUILD_NO_GAP_FILL=y
 CONFIG_XIP=y
 CONFIG_NORDIC_QSPI_NOR_XIP=y
 CONFIG_XIP_SPLIT_IMAGE=y
+
+# Init changes for QSPI XIP code placement
+CONFIG_FLASH_INIT_PRIORITY=40
+CONFIG_SHELL_BACKEND_SERIAL_INIT_PRIORITY=50
