--- a/boards/arm/thingy53_nrf5340/pm_static_thingy53_nrf5340_cpuapp.yml
+++ b/boards/arm/thingy53_nrf5340/pm_static_thingy53_nrf5340_cpuapp.yml
@@ -1,55 +1,185 @@
+EMPTY_0:
+  address: 0x14200
+  end_address: 0x18000
+  placement:
+    before:
+    - s1_pad
+  region: flash_primary
+  size: 0x3e00
+EMPTY_1:
+  address: 0x24200
+  end_address: 0x28000
+  placement:
+    before:
+    - mcuboot_pad
+  region: flash_primary
+  size: 0x3e00
 app:
-  address: 0x10200
+  address: 0x28200
+  end_address: 0x94000
   region: flash_primary
-  size: 0xdfe00
-mcuboot:
+  size: 0x6be00
+app_image:
+  address: 0x28200
+  end_address: 0x94000
+  orig_span: &id001
+  - app
+  region: flash_primary
+  size: 0x6be00
+  span: *id001
+b0:
   address: 0x0
+  end_address: 0x8000
+  placement:
+    after:
+    - start
   region: flash_primary
-  size: 0x10000
+  size: 0x8000
+b0_container:
+  address: 0x0
+  end_address: 0x8000
+  orig_span: &id002
+  - b0
+  region: flash_primary
+  size: 0x8000
+  span: *id002
+mcuboot:
+  address: 0x8200
+  end_address: 0x14200
+  placement:
+    before:
+    - mcuboot_primary
+  region: flash_primary
+  sharers: 0x1
+  size: 0xc000
 mcuboot_pad:
-  address: 0x10000
+  address: 0x28000
+  end_address: 0x28200
+  placement:
+    align:
+      start: 0x4000
+    before:
+    - mcuboot_primary_app
   region: flash_primary
+  sharers: 0x2
   size: 0x200
 mcuboot_primary:
-  address: 0x10000
-  orig_span: &id001
+  address: 0x28000
+  end_address: 0x94000
+  orig_span: &id003
+  - app
   - mcuboot_pad
-  - app
   region: flash_primary
-  size: 0xe0000
-  span: *id001
+  sharers: 0x1
+  size: 0x6c000
+  span: *id003
 mcuboot_primary_app:
-  address: 0x10200
-  orig_span: &id002
+  address: 0x28200
+  end_address: 0x94000
+  orig_span: &id004
   - app
   region: flash_primary
-  size: 0xdfe00
-  span: *id002
-settings_storage:
-  address: 0xf0000
-  region: flash_primary
-  size: 0x10000
-mcuboot_primary_1:
-  address: 0x0
-  size: 0x40000
-  device: flash_ctrl
-  region: ram_flash
+  size: 0x6be00
+  span: *id004
 mcuboot_secondary:
-  address: 0x00000
-  size: 0xe0000
-  device: MX25R64
-  region: external_flash
-mcuboot_secondary_1:
-  address: 0xe0000
-  size: 0x40000
-  device: MX25R64
-  region: external_flash
-external_flash:
-  address: 0x120000
-  size: 0x6e0000
-  device: MX25R64
-  region: external_flash
+  address: 0x94000
+  end_address: 0x100000
+  placement:
+    after:
+    - mcuboot_primary
+    align:
+      start: 0x4000
+    align_next: 0x4000
+  region: flash_primary
+  share_size:
+  - mcuboot_primary
+  size: 0x6c000
+otp:
+  address: 0xff8380
+  end_address: 0xff83fc
+  region: otp
+  size: 0x7c
+provision:
+  address: 0xff8100
+  end_address: 0xff8380
+  region: otp
+  size: 0x280
+rpmsg_nrf53_sram:
+  address: 0x20070000
+  end_address: 0x20080000
+  placement:
+    before:
+    - end
+  region: sram_primary
+  size: 0x10000
+s0:
+  address: 0x8000
+  end_address: 0x14200
+  orig_span: &id005
+  - mcuboot
+  - s0_pad
+  region: flash_primary
+  size: 0xc200
+  span: *id005
+s0_image:
+  address: 0x8200
+  end_address: 0x14200
+  orig_span: &id006
+  - mcuboot
+  region: flash_primary
+  size: 0xc000
+  span: *id006
+s0_pad:
+  address: 0x8000
+  end_address: 0x8200
+  placement:
+    after:
+    - b0_container
+    align:
+      start: 0x4000
+  region: flash_primary
+  share_size:
+  - mcuboot_pad
+  size: 0x200
+s1:
+  address: 0x18000
+  end_address: 0x24200
+  orig_span: &id007
+  - s1_pad
+  - s1_image
+  region: flash_primary
+  size: 0xc200
+  span: *id007
+s1_image:
+  address: 0x18200
+  end_address: 0x24200
+  placement:
+    after:
+    - s1_pad
+    - s0
+  region: flash_primary
+  share_size:
+  - mcuboot
+  size: 0xc000
+s1_pad:
+  address: 0x18000
+  end_address: 0x18200
+  placement:
+    after:
+    - s0
+    align:
+      start: 0x4000
+  region: flash_primary
+  share_size:
+  - mcuboot_pad
+  size: 0x200
 pcd_sram:
   address: 0x20000000
-  size: 0x2000
+  end_address: 0x20002000
   region: sram_primary
+  size: 0x2000
+sram_primary:
+  address: 0x20002000
+  end_address: 0x20070000
+  region: sram_primary
+  size: 0x6e000
